--- a/public/02-catalog.html
+++ b/public/02-catalog.html
@@ -126,6 +126,142 @@
 					<h1>Садовая техника</h1>
 				</div>
 			</div>
+			<!-- start sAllCategories-->
+			<section class="sAllCategories section" id="sAllCategories">
+				<div class="container sliderAutoWidthWrap">
+					<div class="row">
+						<div class="col-10">
+							<div class="sliderAutoWidth sliderAutoWidth--js swiper">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Сварочное оборудование
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для контактной сварки
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для плазменной резки
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для пластика и синтетических материалов
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для пластиковых труб
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Маски и очки сварщика
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Сварочные аппараты
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="sAllCategories__col sAllCategories__col--js col-12">
+							<div class="sAllCategories__fullList">
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<button class="sAllCategories__show"> 
+								<p class="sAllCategories__text">Все категории
+								</p>
+							</button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sAllCategories-->
 			<div class="container">
 				<!-- start sCatalogHead-->
 				<div class="sCatalogHead" id="sCatalogHead">
@@ -263,7 +399,7 @@
 						<!-- start sCatalogBody-->
 						<div class="sCatalogBody" id="sCatalogBody">
 							<div class="sCatalogBody__row row">
-								<div class="col-auto col-lg-4 col-xxl-auto">
+								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -324,7 +460,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-lg-4 col-xxl-auto">
+								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -385,7 +521,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-lg-4 col-xxl-auto">
+								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -446,7 +582,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-lg-4 col-xxl-auto">
+								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -507,7 +643,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-lg-4 col-xxl-auto">
+								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -568,7 +704,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-lg-4 col-xxl-auto">
+								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -908,8 +1044,78 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-2">
-							<button class="sAllCategories__show">Все категории
+						<div class="sAllCategories__col sAllCategories__col--js col-12">
+							<div class="sAllCategories__fullList">
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<button class="sAllCategories__show"> 
+								<p class="sAllCategories__text">Все категории
+								</p>
 							</button>
 						</div>
 					</div>
