--- a/public/index.html
+++ b/public/index.html
@@ -1553,8 +1553,78 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-2">
-							<button class="sAllCategories__show">Все категории
+						<div class="sAllCategories__col sAllCategories__col--js col-12">
+							<div class="sAllCategories__fullList">
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Сварочное оборудование
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для контактной сварки
+									</a>
+								</div>
+								<div class="categories-item">
+									<a class="categories-item__title" href="#">Аппараты для плазменной резки
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<button class="sAllCategories__show"> 
+								<p class="sAllCategories__text">Все категории
+								</p>
 							</button>
 						</div>
 					</div>
