--- a/public/03-blog-item.html
+++ b/public/03-blog-item.html
@@ -130,7 +130,7 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="col-auto">
+					<div class="col-lg-auto">
 						<!-- start sBlogNav-->
 						<section class="sBlogNav section hc-container" id="sBlogNav">
 							<div class="sBlogNav__sticky-wrap sBlogNav__sticky-wrap--js">
