--- a/public/10-order-done.html
+++ b/public/10-order-done.html
@@ -4,7 +4,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Моя корзина</title>
+		<title>Заказ сформирован</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -14,7 +14,7 @@
 		<link href="libs/ion-rangeslider/css/ion.rangeSlider.min.css" rel="stylesheet"/>
 		<link href="css/main.min.css?v=0.0.1" rel="stylesheet"/>
 	</head>
-	<body class="main-page" data-bg="02-catalog.png">
+	<body class="main-page">
 		<div class="main-wrapper">
 			<!-- start topLine-->
 			<div class="topLine section" id="topLine">
@@ -119,108 +119,29 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Корзина</span>
+							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Корзина</span>
 									<meta itemprop="position" content="2"/></a></li>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Оформление заказа</span>
+									<meta itemprop="position" content="3"/></a></li>
 						</ol>
 					</nav>
-					<h1>Моя корзина</h1>
+					<h1>Заказ сформирован</h1>
 				</div>
 			</div>
-			<!-- start sBasket-->
-			<section class="sBasket section" id="sBasket">
-				<div class="container">
-					<table class="table table-borderless">
-						<thead class="table-dark header-top">
-							<tr>
-								<th class="text-start" colspan="2">Товар</th>
-								<th>Артикул</th>
-								<th>Количество</th>
-								<th>Вес</th>
-								<th>Цена</th>
-								<th> </th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr class="basket-item">
-								<td class="basket-item__img-wrap" data-label="Товар"><a href="#"><img src="img/basket-1.jpg" alt="" loading="lazy"/></a>
-								</td>
-								<td class="basket-item__title">
-									<a class="basket-item__name" href="#">Штыковая укороченная лопата FISKARS SolidTM 1026667
-									</a>
-								</td>
-								<td class="basket-item__number" data-label="Артикул">1026667
-								</td>
-								<td class="basket-item__count" data-label="Количество">
-									<div class="addBlock">
-										<button class="addBlock__btn addBlock__btn--minus" type="button">
-										</button>
-										<input type="text" value="1"/>
-										<button class="addBlock__btn addBlock__btn--plus" type="button">
-										</button>
-									</div>
-								</td>
-								<td class="basket-item__weight" data-label="Вес">0 кг
-								</td>
-								<td class="basket-item__price" data-label="Цена">850 руб.
-								</td>
-								<td class="basket-item__delete" data-label="Удалить из корзины">
-									<button class="basket-item__remove-btn">
-										<svg class="icon icon-close ">
-											<use xlink:href="img/svg/sprite.svg#close"></use>
-										</svg>
-									</button>
-								</td>
-							</tr>
-							<tr class="basket-item">
-								<td class="basket-item__img-wrap" data-label="Товар"><a href="#"><img src="img/basket-2.jpg" alt="" loading="lazy"/></a>
-								</td>
-								<td class="basket-item__title">
-									<a class="basket-item__name" href="#">Аккумуляторная газонокосилка PATRIOT РТ 330 Li
-									</a>
-								</td>
-								<td class="basket-item__number" data-label="Артикул">512300330
-								</td>
-								<td class="basket-item__count" data-label="Количество">
-									<div class="addBlock">
-										<button class="addBlock__btn addBlock__btn--minus" type="button">
-										</button>
-										<input type="text" value="1"/>
-										<button class="addBlock__btn addBlock__btn--plus" type="button">
-										</button>
-									</div>
-								</td>
-								<td class="basket-item__weight" data-label="Вес">0 кг
-								</td>
-								<td class="basket-item__price" data-label="Цена">12290 руб.
-								</td>
-								<td class="basket-item__delete" data-label="Удалить из корзины">
-									<button class="basket-item__remove-btn">
-										<svg class="icon icon-close ">
-											<use xlink:href="img/svg/sprite.svg#close"></use>
-										</svg>
-									</button>
-								</td>
-							</tr>
-						</tbody>
-						<thead class="table-dark">
-							<tr>
-								<th class="text-end" colspan="3">Итого</th>
-								<th>2 шт.</th>
-								<th>0 кг</th>
-								<th class="text-end">13 140 руб.</th>
-								<th> </th>
-							</tr>
-						</thead>
-					</table>
-					<div class="sBasket__buttons">
-						<a class="sBasket__btn sBasket__btn--dark" href="#">Очистить корзину
-						</a>
-						<a class="sBasket__btn sBasket__btn--green" href="#">Оформить
-						</a>
+			<!-- start sOrderDone-->
+			<section class="sOrderDone section" id="sOrderDone">
+				<div class="sOrderDone__container container">
+					<div class="sOrderDone__main">
+						<p>Ваш заказ &#8470;&nbsp;<span>1275</span>от&nbsp;<span>22.04.2022 17:10 </span>успешно создан.</p>
+						<p>Номер вашей оплаты: &#8470;&nbsp;<span>1275/1</span></p>
 					</div>
+					<p>Вы&nbsp;можете следить за&nbsp;выполнением своего заказа в&nbsp;<a href="#">Персональном разделе сайта. </a>Обратите внимание, что для входа в&nbsp;этот раздел вам необходимо будет ввести логин и&nbsp;пароль пользователя сайта.</p>
+					<div class="sOrderDone__payment"> 
+					</div>
+					<p>Оплата заказа <br>Наличный расчет</p>
 				</div>
 			</section>
-			<!-- end sBasket-->
+			<!-- end sOrderDone-->
 			<footer class="footer">
 				<div class="container">
 					<div class="footer__top row">
