--- a/public/index.html
+++ b/public/index.html
@@ -1555,69 +1555,103 @@
 						</div>
 						<div class="sAllCategories__col sAllCategories__col--js col-12">
 							<div class="sAllCategories__fullList">
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Сварочное оборудование
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Аппараты для контактной сварки
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Аппараты для плазменной резки
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Сварочное оборудование
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Аппараты для контактной сварки
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Аппараты для плазменной резки
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Сварочное оборудование
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Аппараты для контактной сварки
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Аппараты для плазменной резки
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Сварочное оборудование
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Аппараты для контактной сварки
-									</a>
-								</div>
-								<div class="categories-item">
-									<a class="categories-item__title" href="#">Аппараты для плазменной резки
-									</a>
+								<div class="sAllCategories__row-full-list row">
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Сварочное оборудование
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для плазменной резки
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для контактной сварки
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Сварочное оборудование
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для плазменной резки
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для контактной сварки
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Сварочное оборудование
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для контактной сварки
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для плазменной резки
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Сварочное оборудование
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для контактной сварки
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для плазменной резки
+											</a>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
